使用options.templateData.FILE_NAME支持自定义文件保存的文件名

--- a/test/fixtures/layout_api/layout.html
+++ b/test/fixtures/layout_api/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title><%= title %></title>
         <style>
             body{
                 color:#fff;
@@ -11,10 +11,8 @@
     </head>
 
     <body>
-        <p>{SRC}</p>
-        <p>{DEST}</p>
-        <p><%= SRC %></p>
         <p><%= mykey %></p>
+        <p><%= otheer %></p>
         {DOC}
 
         <script>
@@ -24,4 +22,3 @@
         </script>
     </body>
 </html>
-<!-- build in <%= grunt.template.today('yyyy-mm-dd HH:MM:ss')%>-->
